# toggl-invoicing

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: invoice_data.json
src/toggl_invoicing/: __init__.py
src/toggl_invoicing/parsers/: __init__.py  abstract_template_data_parser.py
src/toggl_invoicing/parsers/basic/: __init__.py  basic_template_data_parser.py
src/toggl_invoicing/toggl/: __init__.py  toggl_api.py
src/toggl_invoicing/utils/: __init__.py  jinja.py
templates/basic/: basic_template.css  basic_template.html
tests/test_toggl_invoicing/parsers/: common_tests.py  test_interface.py
tests/test_toggl_invoicing/parsers/basic/: test_basic_template_data_parser.py
tests/test_toggl_invoicing/toggl/: _test_toggl_api.py  mock_api.py  test_toggl_api.py
tests/test_toggl_invoicing/utils/: test_template_loader.py
